Fix: Fix nav overflow

--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -11,9 +11,8 @@
   align-items: center;
   gap: 10px;
   width: 100%;
-  height: 70px;
-  padding-left: 41px;
-  padding-right: 41px;
+  height: 52px;
+  padding: 5px 4vw;
   background-color: var(--bg-color);
 }
 
@@ -46,14 +45,35 @@
 
 .Header .Button,
 .Header .Button--highlight {
+  flex-shrink: 0;
   width: auto;
 }
 
+@media (max-width: 479px) {
+  .Header .Button,
+  .Header .Button--highlight {
+    padding: 0 8px;
+    font-size: 13px;
+    text-transform: capitalize;
+  }
+}
+
 @media (min-width: 768px) {
+  .Header > nav {
+    height: 70px;
+    padding-inline: 32px;
+  }
+
   .Header .Button,
   .Header .Button--highlight {
     --height: 50px;
     padding-inline: 16px;
     font-size: 18px;
+  }
+}
+
+@media (min-width: 1025px) {
+  .Header > nav {
+    padding-inline: 41px;
   }
 }
